alteracoes no botao de comecar jogo e imagens

--- a/mordecai/comecar-mordecai.html
+++ b/mordecai/comecar-mordecai.html
@@ -22,8 +22,8 @@
                 </p>
                 <a href=""><p class="botao" id="caminho-mordecai">RESPONDER</p></a>
             </div>
-            <div>
-                <a href="mordecai.html"><img src="../assets/mordecai.jpg" alt="imagem mordecai">                
+            <div class="personagem-escolhido">
+                <a href="mordecai.html"><img src="../assets/mordecai5.jfif" alt="imagem mordecai">                
             </div>
         </div>
     </div>  
