--- a/pairulito/pairulito.html
+++ b/pairulito/pairulito.html
@@ -17,7 +17,7 @@
             </a>
         </div>   
         <div class="personagem-escolhido">
-            <a href="pairulito.html"><img src="../assets/pairulito.jpg" alt="imagem pairulito">
+            <a href="pairulito.html"><img src="../assets/pairulito.jpg" alt="imagem pairulito"></a>
         </div>
     </div>  
     <script src="../js/comecar-pairulito.js"></script>
