--- a/rigby/rigby.html
+++ b/rigby/rigby.html
@@ -17,7 +17,7 @@
             </a> 
         </div>  
         <div class="personagem-escolhido">
-            <a href="rigby.html"><img src="../assets/rigby2.png" alt="imagem rigby">
+            <a href="rigby.html"><img src="../assets/rigby2.png" alt="imagem rigby"></a>
         </div>
     </div>  
     <script src="../js/comecar-rigby.js"></script>
