--- a/mordecai/mordecai.html
+++ b/mordecai/mordecai.html
@@ -17,7 +17,7 @@
             </a>              
         </div> 
         <div class="personagem-escolhido">
-            <a href="mordecai.html"><img src="../assets/mordecai.jpg" alt="imagem mordecai">
+            <a href="mordecai.html"><img src="../assets/mordecai5.jfif" alt="imagem mordecai"></a>
         </div>
     </div>  
     <script src="../js/comecar-mordecai.js"></script>
