--- a/pairulito/comecar-pairulito.html
+++ b/pairulito/comecar-pairulito.html
@@ -23,7 +23,7 @@
                 </p>
                 <a href=""><p class="botao" id="caminho-pairulito" onclick="caminhoPairulito()">RESPONDER</p></a>
             </div>
-        <div>
+        <div class="personagem-escolhido">
             <a href="pairulito.html"><img src="../assets/pairulito.jpg" alt="imagem pairulito">
         </div>
     </div>  
