botao fase final consertado

--- a/pairulito/tiramisu-dois.html
+++ b/pairulito/tiramisu-dois.html
@@ -20,7 +20,7 @@
                     Seus amigos perceberam que você comprou Tiramisu em uma famosa loja de doces da região. <br>
                     Você foi excluído da competição!
                 </p>
-                <a href=""><p class="botao" onclick="caminhoTiramisu()">RESPONDER</p></a>
+                <a href=""><p class="botao" onclick="jogarDeNovo()">Jogar de novo</p></a>
             </div>
         <div>
             <a href="pairulito.html"><img src="../assets/pairulito.jpg" alt="imagem pairulito">
