--- a/pairulito/tiramisu-um.html
+++ b/pairulito/tiramisu-um.html
@@ -23,7 +23,7 @@
                     Parabéns, você é dono da receita!!
 
                 </p>
-                <a href=""><p class="botao" onclick="caminhoTiramisu()">RESPONDER</p></a>
+                <a href=""><p class="botao" onclick="jogarDeNovo()">Jogar de novo</p></a>
             </div>
         <div>
             <a href="pairulito.html"><img src="../assets/pairulito.jpg" alt="imagem pairulito">
