pequenas alterações visando melhoria na responsividade e remoção de código desnecessario

--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
             </div>
         </div>
         <footer class="footer">
-            <h6>Criado por <a href="">Leticia Martins</a> </h6>
+            <h6>Criado por <a href="https://github.com/letxns/projeto-final-modulo-um">Leticia Martins</a> </h6>
         </footer>
     </div>  
-    <script src="js/script.js"></script>
 </body>
 </html>
