--- a/mordecai/comecar-mordecai.html
+++ b/mordecai/comecar-mordecai.html
@@ -18,12 +18,15 @@
         <div class="comecar-personagem">
             <div class="caixa-perguntas">
                 <p>
-                    Qual comida você deseja levar à festa? <br><br> 1 → Cachorro quente <br> 2 → Ravioli <br> 3 → Canjica <br>
+                    Qual comida você deseja levar à festa? <br><br> 
+                    1 → Cachorro quente <br> 
+                    2 → Ravioli <br> 
+                    3 → Canjica <br>
                 </p>
-                <a href=""><p class="botao" id="caminho-mordecai">RESPONDER</p></a>
+                <a href=""><p class="botao" id="caminho-mordecai" caminhoMordecai()>RESPONDER</p></a>
             </div>
-            <div class="personagem-escolhido">
-                <a href="mordecai.html"><img src="../assets/mordecai5.jfif" alt="imagem mordecai">                
+            <div class="personagem">
+                <a href="#"><img src="../assets/mordecai5.jpg" alt="imagem mordecai" class="imagem-personagem">                
             </div>
         </div>
     </div>  
