--- a/mordecai/hotdog-caseiro-um.html
+++ b/mordecai/hotdog-caseiro-um.html
@@ -18,13 +18,13 @@
         <div class="comecar-personagem">
             <div class="caixa-perguntas">
                 <p>
-                    Você se atrapalha um pouco no processo, mas pelo menos está comestível. Ninguém passa mal dessa vez. <br><br>
-                    Você não ganhou a competição. <br>
+                    Você se atrapalha um pouco no processo, mas parece que deu certo! Ninguém passou mal e nenhum dos seus amigos levou uma comida melhor. <br><br>
+                    Você ganhou a competição! <br>
                 </p>
                 <a href=""><p class="botao" id="caminho-hot-dog" onclick="jogarDeNovo()">JOGAR DE NOVO</p></a>
             </div>
             <div>
-                <a href="mordecai.html"><img src="../assets/mordecai.jpg" alt="imagem mordecai">                
+                <a href="#"><img src="../assets/mordecai3.jpg" alt="imagem mordecai" class="imagem-personagem">                
             </div>
         </div>
     </div>  
