--- a/mordecai/mordecai-hotdog-caseiro.html
+++ b/mordecai/mordecai-hotdog-caseiro.html
@@ -26,7 +26,7 @@
                 <a href=""><p class="botao" onclick="hotDogCaseiro()">RESPONDER</p></a>
             </div>
             <div>
-                <a href="mordecai.html"><img src="../assets/mordecai.jpg" alt="imagem mordecai">                
+                <a href="#"><img src="../assets/mordecai5.jpg" alt="imagem mordecai" class="imagem-personagem">                
             </div>
         </div>
     </div>  
