--- a/mordecai/mordecai-hotdog.html
+++ b/mordecai/mordecai-hotdog.html
@@ -13,7 +13,6 @@
         <div class="titulo">
             <h1>Você escolheu prosseguir com Mordecai</h1><br>              
             <a href="mordecai.html">
-               <!-- <p class="comecar-botao" id="comecar-mordecai">Começar jogo com Mordecai</p>-->
             </a>
         </div> 
         <div class="comecar-personagem">
@@ -27,7 +26,7 @@
                 <a href=""><p class="botao" onclick="caminhoHotDog()">RESPONDER</p></a>
             </div>
             <div>
-                <a href="mordecai.html"><img src="../assets/mordecai.jpg" alt="imagem mordecai">                
+                <a href="#"><img src="../assets/mordecai5.jpg" alt="imagem mordecai" class="imagem-personagem">                
             </div>
         </div>
     </div>  
