--- a/mordecai/mordecai-ravioli.html
+++ b/mordecai/mordecai-ravioli.html
@@ -25,7 +25,7 @@
                 <a href=""><p class="botao" onclick="jogarDeNovo()">JOGAR DE NOVO</p></a>
             </div>
             <div>
-                <a href="mordecai.html"><img src="../assets/mordecai.jpg" alt="imagem mordecai">                
+                <a href="#"><img src="../assets/mordecai3.jpg" alt="imagem mordecai" class="imagem-personagem">                
             </div>
         </div>
     </div>  
