--- a/pairulito/bolo-um-dois.html
+++ b/pairulito/bolo-um-dois.html
@@ -22,7 +22,7 @@
                 <a href=""><p class="botao" id="caminho-hot-dog" onclick="jogarDeNovo()">JOGAR DE NOVO</p></a>
             </div>
         <div>
-            <a href="pairulito.html"><img src="../assets/pairulito.jpg" alt="imagem pairulito">
+            <a href="#"><img src="../assets/pairulito.jpg" alt="imagem pairulito">
         </div>
     </div>  
     <script src="../js/script-pairulito.js"></script>
