--- a/pairulito/bolo-um-um.html
+++ b/pairulito/bolo-um-um.html
@@ -18,11 +18,13 @@
             <div class="caixa-perguntas">
                 <p>
                     Ninguém reparou que você sumiu… Mas pelo menos estão todos felizes com sua descoberta! <br>
+                    Para compensar, seus amigos resolvem improvisar uma competição de última hora, contando com o total de um prato: o seu. <br> <br>
+                    Parabéns, você ganhou!
                 </p>
                 <a href=""><p class="botao" id="caminho-hot-dog" onclick="jogarDeNovo()">JOGAR DE NOVO</p></a>
             </div>
         <div>
-            <a href="pairulito.html"><img src="../assets/pairulito.jpg" alt="imagem pairulito">
+            <a href="#"><img src="../assets/pairulito.jpg" alt="imagem pairulito">
         </div>
     </div>  
     <script src="../js/script-pairulito.js"></script>
