--- a/pairulito/comecar-pairulito.html
+++ b/pairulito/comecar-pairulito.html
@@ -19,13 +19,14 @@
                 <p>
                     Qual comida você deseja levar à festa? <br> <br>
                     → Bolo <br>
-                    → Tiramisu 
+                    → Tiramisu <br>
+                    → Torta de limão
                 </p>
                 <a href=""><p class="botao" id="caminho-pairulito" onclick="caminhoPairulito()">RESPONDER</p></a>
             </div>
-        <div class="personagem-escolhido">
-            <a href="pairulito.html"><img src="../assets/pairulito.jpg" alt="imagem pairulito">
-        </div>
+            <div class="imagem-personagem">
+                <a href="#"><img src="../assets/pairulito.jpg" alt="imagem pairulito">
+            </div>
     </div>  
     <script src="../js/script-pairulito.js"></script>
 </body>
