--- a/pairulito/tiramisu-um.html
+++ b/pairulito/tiramisu-um.html
@@ -26,7 +26,7 @@
                 <a href=""><p class="botao" onclick="jogarDeNovo()">Jogar de novo</p></a>
             </div>
         <div>
-            <a href="pairulito.html"><img src="../assets/pairulito.jpg" alt="imagem pairulito">
+            <a href="#"><img src="../assets/pairulito.jpg" alt="imagem pairulito">
         </div>
     </div>  
     <script src="../js/script-pairulito.js"></script>
