--- a/personagens.html
+++ b/personagens.html
@@ -9,24 +9,24 @@
     <title>Apenas um show</title>
 </head>
 <body>
-    <div class="container-principal">
-        <div class="titulo">
-            <h1>Qual personagem você escolhe para iniciar sua jornada?</h1>   
+        <div class="container-principal escolher-personagem">
+            <div class="titulo">
+                <h1>Qual personagem você escolhe para iniciar sua jornada?</h1>   
+            </div>
+            <div class="container-personagens">
+                <div class="comecar personagem">
+                    <a href="mordecai/mordecai.html" id="mordecai"><img src="assets/mordecai.jpg" alt="imagem mordecai">
+                    <p class="comecar-botao">COMEÇAR JOGO COM MORDECAI</p></a>
+                </div>
+                <div class="comecar personagem">
+                    <a href="rigby/rigby.html"  id="rigby"><img src="assets/rigby2.png" alt="imagem rigby">
+                    <p id="comecar-rigby" class="comecar-botao">COMEÇAR JOGO COM RIGBY</p></a>
+                </div>
+                <div class="comecar personagem">
+                    <a href="pairulito/pairulito.html" id="pairulito"><img src="assets/pairulito.jpg" alt="imagem pairulito">
+                    <p id="comecar-pairulito" class="comecar-botao">COMEÇAR JOGO COM PAIRULITO</p></a> <br>
+                </div>
+            </div>
         </div>
-        <div class="container-personagens">
-            <div class="comecar personagem">
-                <a href="mordecai/mordecai.html" id="mordecai"><img src="assets/mordecai.jpg" alt="imagem mordecai">
-                <p class="comecar-botao">COMEÇAR JOGO COM MORDECAI</p></a>
-            </div>
-            <div class="comecar personagem">
-                <a href="rigby/rigby.html"  id="rigby"><img src="assets/rigby2.png" alt="imagem rigby">
-                <p id="comecar-rigby" class="comecar-botao">COMEÇAR JOGO COM RIGBY</p></a>
-            </div>
-            <div class="comecar personagem">
-                <a href="pairulito/pairulito.html" id="pairulito"><img src="assets/pairulito.jpg" alt="imagem pairulito">
-                <p id="comecar-pairulito" class="comecar-botao">COMEÇAR JOGO COM PAIRULITO</p></a>
-            </div>
-        </div>
-    </div>
 </body>
 </html>
