--- a/rigby/comecar-rigby.html
+++ b/rigby/comecar-rigby.html
@@ -19,12 +19,13 @@
                 <p>
                     Qual comida você deseja levar à festa? <br> <br>
                     → Mac and Cheese <br>
-                    → Chimichurri 
+                    → Chimichurri <br>
+                    → Estrogonoffe 
                 </p>
                 <a href=""><p class="botao" id="caminho-rigby" onclick="caminhoRigby()">RESPONDER</p></a>
             </div>
             <div class="imagem-personagem">
-                <a href="rigby.html"><img src="../assets/rigby.jpg" alt="imagem rigby">                
+                <a href="#"><img src="../assets/rigby.jpg" alt="imagem rigby">                
             </div>
         </div>
     </div>  
