--- a/rigby/estrogonoffe-um-dois-dois.html
+++ b/rigby/estrogonoffe-um-dois-dois.html
@@ -18,15 +18,14 @@
         <div class="comecar-personagem">
             <div class="caixa-perguntas">
                 <p>
-                    Pra ser a melhor comida da festa você decide comprar seu Mac and Cheese pronto de um restaurante! <br>
-                    Onde você prefere comprar? <br> <br>
-                    1 → No boteco tenebroso <br>
-                    2 → No restaurante 5 estrelas que acabou de abrir
+                    Você acaba se confundindo no caminho e anda uma quadra a mais do que deveria. <br>
+                    Você ainda conseguiria comprar o frango a tempo, se não tivesse se distraído e caído em uma enorme poça de lama. <br> <br>
+                    Quem sabe você não consegue ganhar no próximo ano?
                 </p>
-                <a href=""><p class="botao" onclick="caminhoMacNChesse()">RESPONDER</p></a>
+                <a href=""><p class="botao" onclick="jogarDeNovo()">Jogar de novo</p></a>
             </div>
             <div>
-                <a href="#"><img src="../assets/rigby.jpg" alt="imagem rigby">                
+                <a href="#"><img src="../assets/rigby.jpg" alt="imagem rigby" class="imagem-personagem">                
             </div>
         </div>
     </div>  
