--- a/rigby/estrogonoffe-um-dois-um.html
+++ b/rigby/estrogonoffe-um-dois-um.html
@@ -18,15 +18,14 @@
         <div class="comecar-personagem">
             <div class="caixa-perguntas">
                 <p>
-                    Pra ser a melhor comida da festa você decide comprar seu Mac and Cheese pronto de um restaurante! <br>
-                    Onde você prefere comprar? <br> <br>
-                    1 → No boteco tenebroso <br>
-                    2 → No restaurante 5 estrelas que acabou de abrir
+                    Você consegue chegar no mercado e, apesar da fila, você volta para casa a tempo de participar da competição! <br>
+                    Ninguém percebe que você cozinhou no microondas e seu prato é eleito o melhor da festa! <br>
+                    Parabéns!
                 </p>
-                <a href=""><p class="botao" onclick="caminhoMacNChesse()">RESPONDER</p></a>
+                <a href=""><p class="botao" onclick="jogarDeNovo()">Jogar de novo</p></a>
             </div>
             <div>
-                <a href="#"><img src="../assets/rigby.jpg" alt="imagem rigby">                
+                <a href="#"><img src="../assets/rigby4.jpg" alt="imagem rigby" class="imagem-personagem">                
             </div>
         </div>
     </div>  
