--- a/rigby/estrogonoffe-um.html
+++ b/rigby/estrogonoffe-um.html
@@ -18,12 +18,11 @@
         <div class="comecar-personagem">
             <div class="caixa-perguntas">
                 <p>
-                    Pra ser a melhor comida da festa você decide comprar seu Mac and Cheese pronto de um restaurante! <br>
-                    Onde você prefere comprar? <br> <br>
-                    1 → No boteco tenebroso <br>
-                    2 → No restaurante 5 estrelas que acabou de abrir
+                    Enquanto o prato está no microondas, você deveria aproveitar para cortar alguns temperos? <br>
+                    1 → Sim <br>
+                    2 → Não, ficarei olhando fixamente para o microondas enquanto o prato não estiver pronto
                 </p>
-                <a href=""><p class="botao" onclick="caminhoMacNChesse()">RESPONDER</p></a>
+                <a href=""><p class="botao" onclick="caminhoEstrogonoffe()">RESPONDER</p></a>
             </div>
             <div>
                 <a href="#"><img src="../assets/rigby.jpg" alt="imagem rigby">                
