--- a/rigby/mac-and-cheese-dois.html
+++ b/rigby/mac-and-cheese-dois.html
@@ -23,10 +23,10 @@
                     Você é atacado com pedaços de macarrão e precisa correr muito para escapar!
 
                 </p>
-                <a href=""><p class="botao" id="caminho-hot-dog" onclick="jogarDeNovo()">Jogar de novo</p></a>
+                <a href=""><p class="botao" onclick="jogarDeNovo()">Jogar de novo</p></a>
             </div>
             <div>
-                <a href="rigby.html"><img src="../assets/rigby.jpg" alt="imagem rigby">                
+                <a href="#"><img src="../assets/rigby.jpg" alt="imagem rigby">                
             </div>
         </div>
     </div>  
