--- a/rigby/mac-and-cheese-um.html
+++ b/rigby/mac-and-cheese-um.html
@@ -21,10 +21,10 @@
                     A comida tem um cheiro diferenciado… mas é bem gostosa! <br>
                     Você não ganhou a competição melhor comida, mas pelo menos não sobrou nada! 
                 </p>
-                <a href=""><p class="botao" id="caminho-hot-dog" onclick="jogarDeNovo()">Jogar de novo</p></a>
+                <a href=""><p class="botao" onclick="jogarDeNovo()">Jogar de novo</p></a>
             </div>
             <div>
-                <a href="rigby.html"><img src="../assets/rigby.jpg" alt="imagem rigby">                
+                <a href="#"><img src="../assets/rigby.jpg" alt="imagem rigby">                
             </div>
         </div>
     </div>  
