--- a/rigby/rigby-chimichurri.html
+++ b/rigby/rigby-chimichurri.html
@@ -25,7 +25,7 @@
                 <a href=""><p class="botao" onclick="chimichurri()">RESPONDER</p></a>
             </div>
             <div>
-                <a href="rigby.html"><img src="../assets/rigby.jpg" alt="imagem rigby">                
+                <a href="#"><img src="../assets/rigby.jpg" alt="imagem rigby">                
             </div>
         </div>
     </div>  
