--- a/rigby/rigby-estrogonoffe.html
+++ b/rigby/rigby-estrogonoffe.html
@@ -18,12 +18,11 @@
         <div class="comecar-personagem">
             <div class="caixa-perguntas">
                 <p>
-                    Pra ser a melhor comida da festa você decide comprar seu Mac and Cheese pronto de um restaurante! <br>
-                    Onde você prefere comprar? <br> <br>
-                    1 → No boteco tenebroso <br>
-                    2 → No restaurante 5 estrelas que acabou de abrir
+                    Pensando em poupar tempo, qual seria a melhor opção? <br> <br>
+                    1 → Preparar seu prato no microondas <br>
+                    2 → Procurar um chef auxiliar 
                 </p>
-                <a href=""><p class="botao" onclick="caminhoMacNChesse()">RESPONDER</p></a>
+                <a href=""><p class="botao" onclick="estrogonoffe()">RESPONDER</p></a>
             </div>
             <div>
                 <a href="#"><img src="../assets/rigby.jpg" alt="imagem rigby">                
