--- a/mordecai/mordecai-hotdog-barraquinha.html
+++ b/mordecai/mordecai-hotdog-barraquinha.html
@@ -24,7 +24,7 @@
                 <a href=""><p class="botao" id="caminho-hot-dog" onclick="jogarDeNovo()">JOGAR DE NOVO</p></a>
             </div>
             <div>
-                <a href="mordecai.html"><img src="../assets/mordecai.jpg" alt="imagem mordecai">                
+                <a href="#"><img src="../assets/mordecai4.jpg" alt="imagem mordecai" class="imagem-personagem">                
             </div>
         </div>
     </div>  
