--- a/pairulito/bolo-um.html
+++ b/pairulito/bolo-um.html
@@ -25,7 +25,7 @@
                 <a href=""><p class="botao" onclick="caminhoBoloUm()">RESPONDER</p></a>
             </div>
         <div>
-            <a href="pairulito.html"><img src="../assets/pairulito.jpg" alt="imagem pairulito">
+            <a href="#"><img src="../assets/pairulito.jpg" alt="imagem pairulito">
         </div>
     </div>  
     <script src="../js/script-pairulito.js"></script>
