--- a/pairulito/pairulito-torta-de-limao-dois.html
+++ b/pairulito/pairulito-torta-de-limao-dois.html
@@ -11,25 +11,22 @@
 <body>
     <div class="container-principal escolhido">
         <div class="titulo">
-            <h1>Você escolheu prosseguir com Rigby</h1><br>              
-            <a href="rigby.html">
-            </a>
-        </div> 
+            <h1>Você escolheu prosseguir com Pairulito</h1><br> 
+            <a href="pairulito.html"></a>
+        </div>   
         <div class="comecar-personagem">
             <div class="caixa-perguntas">
                 <p>
-                    Pra ser a melhor comida da festa você decide comprar seu Mac and Cheese pronto de um restaurante! <br>
-                    Onde você prefere comprar? <br> <br>
-                    1 → No boteco tenebroso <br>
-                    2 → No restaurante 5 estrelas que acabou de abrir
+                    Você pega um engarrafamento monstruoso para chegar ao mercado, mas consegue chegar a tempo!
+                    O problema é que os limões estão horríveis e sem suco! <br> <br>
+                    Sua torta não fica boa e você perde a competição!                   
                 </p>
-                <a href=""><p class="botao" onclick="caminhoMacNChesse()">RESPONDER</p></a>
+                <a href=""><p class="botao" id="caminho-hot-dog" onclick="jogarDeNovo()">JOGAR DE NOVO</p></a>
             </div>
-            <div>
-                <a href="#"><img src="../assets/rigby.jpg" alt="imagem rigby">                
-            </div>
+        <div>
+            <a href="#"><img src="../assets/pairulito.jpg" alt="imagem pairulito">
         </div>
     </div>  
-    <script src="../js/script-rigby.js"></script>
+    <script src="../js/script-pairulito.js"></script>
 </body>
 </html>
