--- a/pairulito/pairulito-torta-de-limao.html
+++ b/pairulito/pairulito-torta-de-limao.html
@@ -11,25 +11,22 @@
 <body>
     <div class="container-principal escolhido">
         <div class="titulo">
-            <h1>Você escolheu prosseguir com Rigby</h1><br>              
-            <a href="rigby.html">
-            </a>
-        </div> 
+            <h1>Você escolheu prosseguir com Pairulito</h1><br> 
+            <a href="pairulito.html"></a>
+        </div>   
         <div class="comecar-personagem">
             <div class="caixa-perguntas">
                 <p>
-                    Pra ser a melhor comida da festa você decide comprar seu Mac and Cheese pronto de um restaurante! <br>
-                    Onde você prefere comprar? <br> <br>
-                    1 → No boteco tenebroso <br>
-                    2 → No restaurante 5 estrelas que acabou de abrir
+                    Para fazer sua torta de limão, você precisa de: limões! Onde você prefere comprá-los? <br> <br>
+                    1 → No mercadinho perto de casa <br>
+                    2 → Naquele mercado lindo que fica no centro da cidade! <br>
                 </p>
-                <a href=""><p class="botao" onclick="caminhoMacNChesse()">RESPONDER</p></a>
+                <a href=""><p class="botao" onclick="caminhoTorta()">RESPONDER</p></a>
             </div>
-            <div>
-                <a href="#"><img src="../assets/rigby.jpg" alt="imagem rigby">                
-            </div>
+        <div>
+            <a href="#"><img src="../assets/pairulito.jpg" alt="imagem pairulito">
         </div>
     </div>  
-    <script src="../js/script-rigby.js"></script>
+    <script src="../js/script-pairulito.js"></script>
 </body>
 </html>
