--- a/rigby/chimichurri-dois.html
+++ b/rigby/chimichurri-dois.html
@@ -23,7 +23,7 @@
                 <a href=""><p class="botao" id="caminho-hot-dog" onclick="jogarDeNovo()">Jogar de novo</p></a>
             </div>
             <div>
-                <a href="rigby.html"><img src="../assets/rigby.jpg" alt="imagem rigby">                
+                <a href="#"><img src="../assets/rigby.jpg" alt="imagem rigby">                
             </div>
         </div>
     </div>  
