--- a/rigby/estrogonoffe-dois.html
+++ b/rigby/estrogonoffe-dois.html
@@ -18,12 +18,10 @@
         <div class="comecar-personagem">
             <div class="caixa-perguntas">
                 <p>
-                    Pra ser a melhor comida da festa você decide comprar seu Mac and Cheese pronto de um restaurante! <br>
-                    Onde você prefere comprar? <br> <br>
-                    1 → No boteco tenebroso <br>
-                    2 → No restaurante 5 estrelas que acabou de abrir
+                    O chef auxiliar se esquece do compromisso e não aparece. <br> <br>
+                    Você une esforços e prepara um... ensopado?
                 </p>
-                <a href=""><p class="botao" onclick="caminhoMacNChesse()">RESPONDER</p></a>
+                <a href=""><p class="botao" onclick="jogarDeNovo()">Jogar de novo</p></a>
             </div>
             <div>
                 <a href="#"><img src="../assets/rigby.jpg" alt="imagem rigby">                
