--- a/rigby/estrogonoffe-um-dois.html
+++ b/rigby/estrogonoffe-um-dois.html
@@ -18,15 +18,15 @@
         <div class="comecar-personagem">
             <div class="caixa-perguntas">
                 <p>
-                    Pra ser a melhor comida da festa você decide comprar seu Mac and Cheese pronto de um restaurante! <br>
-                    Onde você prefere comprar? <br> <br>
-                    1 → No boteco tenebroso <br>
-                    2 → No restaurante 5 estrelas que acabou de abrir
+                    Enquanto você olha atentamente para o prato girando, você percebe que esqueceu de cortar o frango! <br>
+                    Ao abrir sua geladeira você percebe que, na verdade, não tem frango. Se você se apressar, talvez consiga ir ao mercado a tempo! <br> <br>
+                    1 → Irei correndo <br>
+                    2 → Irei de bicicleta 
                 </p>
-                <a href=""><p class="botao" onclick="caminhoMacNChesse()">RESPONDER</p></a>
+                <a href=""><p class="botao" onclick="caminhoEstrogonoffeOlhar()">RESPONDER</p></a>
             </div>
             <div>
-                <a href="#"><img src="../assets/rigby.jpg" alt="imagem rigby">                
+                <a href="#"><img src="../assets/rigby.jpg" alt="imagem rigby" class="imagem-personagem">                
             </div>
         </div>
     </div>  
