--- a/rigby/estrogonoffe-um-um.html
+++ b/rigby/estrogonoffe-um-um.html
@@ -18,15 +18,14 @@
         <div class="comecar-personagem">
             <div class="caixa-perguntas">
                 <p>
-                    Pra ser a melhor comida da festa você decide comprar seu Mac and Cheese pronto de um restaurante! <br>
-                    Onde você prefere comprar? <br> <br>
-                    1 → No boteco tenebroso <br>
-                    2 → No restaurante 5 estrelas que acabou de abrir
+                    Você se distrai e esquece que o prato está no microondas. 
+                    Estaria tudo bem, se você não tivesse confundido e inserido o tempo de 10 horas em vez de 10 min. <br> <br>
+                    Seu prato não está apto a concorrer, mas pelo menos ninguém se machucou!
                 </p>
-                <a href=""><p class="botao" onclick="caminhoMacNChesse()">RESPONDER</p></a>
+                <a href=""><p class="botao" onclick="jogarDeNovo()">Jogar de novo</p></a>
             </div>
             <div>
-                <a href="#"><img src="../assets/rigby.jpg" alt="imagem rigby">                
+                <a href="#"><img src="../assets/rigby.jpg" alt="imagem rigby" class="imagem-personagem">                
             </div>
         </div>
     </div>  
