--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Apenas um jogo</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container" style="background-image: url(./assets/bg8.jpg)">
         <div class="container-bem-vindo">
             <h1>Apenas um jogo!</h1> <br>
             <p>
