--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
         </div>
         <footer class="footer">
-            <h6>Criado por <a href="https://github.com/letxns/projeto-final-modulo-um">Leticia Martins</a> </h6>
+            <h6>Desenvolvido por <a href="https://github.com/letxns/projeto-final-modulo-um">Leticia Martins</a> </h6>
         </footer>
     </div>  
 </body>
