--- a/mordecai/comecar-mordecai.html
+++ b/mordecai/comecar-mordecai.html
@@ -12,20 +12,19 @@
     <div class="container-principal escolhido">
         <div class="titulo">
             <h1>Você escolheu prosseguir com Mordecai</h1><br>              
-            <a href="mordecai.html">
-            </a>
+            <a href="mordecai.html"></a>
         </div> 
         <div class="comecar-personagem">
             <div class="caixa-perguntas">
                 <p>
-                    Qual comida você deseja levar à festa? <br><br> 
+                    Qual comida você deseja levar à festa? <br><br><br>
                     1 → Cachorro quente <br> 
                     2 → Ravioli <br> 
-                    3 → Canjica <br>
+                    3 → Canjica <br><br><br>
                 </p>
                 <a href=""><p class="botao" id="caminho-mordecai" caminhoMordecai()>RESPONDER</p></a>
             </div>
-            <div class="personagem">
+            <div>
                 <a href="#"><img src="../assets/mordecai5.jpg" alt="imagem mordecai" class="imagem-personagem">                
             </div>
         </div>
