--- a/mordecai/mordecai-hotdog-barraquinha.html
+++ b/mordecai/mordecai-hotdog-barraquinha.html
@@ -19,7 +19,7 @@
         <div class="comecar-personagem">
             <div class="caixa-perguntas">
                 <p>
-                    A festa foi um sucesso… dentro da UPA! todos passaram mal.
+                    A festa foi um sucesso… dentro da UPA! todos passaram mal.<br><br><br><br>
                 </p>
                 <a href=""><p class="botao" id="caminho-hot-dog" onclick="jogarDeNovo()">JOGAR DE NOVO</p></a>
             </div>
