--- a/pairulito/bolo-um-dois.html
+++ b/pairulito/bolo-um-dois.html
@@ -17,7 +17,7 @@
         <div class="comecar-personagem">
             <div class="caixa-perguntas">
                 <p>
-                    Pairulito nunca mais é visto…
+                    <br> Pairulito nunca mais é visto… <br> <br> <br> <br>
                 </p>
                 <a href=""><p class="botao" id="caminho-hot-dog" onclick="jogarDeNovo()">JOGAR DE NOVO</p></a>
             </div>
