--- a/rigby/chimichurri-dois.html
+++ b/rigby/chimichurri-dois.html
@@ -18,7 +18,7 @@
         <div class="comecar-personagem">
             <div class="caixa-perguntas">
                 <p>
-                    Você fez chili de carne… a comida ficou boa, mas todos os seus amigos riem de você por não saber o que estava fazendo.
+                    Você fez chili de carne… a comida ficou boa, mas todos os seus amigos riem de você por não saber o que estava fazendo. <br> <br> <br>
                 </p>
                 <a href=""><p class="botao" id="caminho-hot-dog" onclick="jogarDeNovo()">Jogar de novo</p></a>
             </div>
