--- a/rigby/comecar-rigby.html
+++ b/rigby/comecar-rigby.html
@@ -17,15 +17,15 @@
         <div class="comecar-personagem">
             <div class="caixa-perguntas">
                 <p>
-                    Qual comida você deseja levar à festa? <br> <br>
-                    → Mac and Cheese <br>
-                    → Chimichurri <br>
-                    → Estrogonoffe 
+                    Qual comida você deseja levar à festa? <br> <br> <br>
+                    1 → Mac and Cheese <br>
+                    2 → Chimichurri <br>
+                    3 → Estrogonoffe <br> <br> <br>
                 </p>
                 <a href=""><p class="botao" id="caminho-rigby" onclick="caminhoRigby()">RESPONDER</p></a>
             </div>
-            <div class="imagem-personagem">
-                <a href="#"><img src="../assets/rigby.jpg" alt="imagem rigby">                
+            <div>
+                <a href="#"><img src="../assets/rigby.jpg" alt="imagem rigby" class="imagem-personagem">                
             </div>
         </div>
     </div>  
