--- a/rigby/estrogonoffe-dois.html
+++ b/rigby/estrogonoffe-dois.html
@@ -19,7 +19,7 @@
             <div class="caixa-perguntas">
                 <p>
                     O chef auxiliar se esquece do compromisso e não aparece. <br> <br>
-                    Você une esforços e prepara um... ensopado?
+                    Você une esforços e prepara um... ensopado? <br> <br> <br>
                 </p>
                 <a href=""><p class="botao" onclick="jogarDeNovo()">Jogar de novo</p></a>
             </div>
