--- a/rigby/mac-and-cheese-um.html
+++ b/rigby/mac-and-cheese-um.html
@@ -19,7 +19,7 @@
             <div class="caixa-perguntas">
                 <p>
                     A comida tem um cheiro diferenciado… mas é bem gostosa! <br>
-                    Você não ganhou a competição melhor comida, mas pelo menos não sobrou nada! 
+                    Você não ganhou a competição melhor de comida, mas pelo menos não sobrou nada! <br> <br>
                 </p>
                 <a href=""><p class="botao" onclick="jogarDeNovo()">Jogar de novo</p></a>
             </div>
