--- a/rigby/rigby-estrogonoffe.html
+++ b/rigby/rigby-estrogonoffe.html
@@ -20,7 +20,7 @@
                 <p>
                     Pensando em poupar tempo, qual seria a melhor opção? <br> <br>
                     1 → Preparar seu prato no microondas <br>
-                    2 → Procurar um chef auxiliar 
+                    2 → Procurar um chef auxiliar <br> <br> <br>
                 </p>
                 <a href=""><p class="botao" onclick="estrogonoffe()">RESPONDER</p></a>
             </div>
