--- a/rigby/rigby-estrogonoffe.html
+++ b/rigby/rigby-estrogonoffe.html
@@ -18,7 +18,7 @@
         <div class="comecar-personagem">
             <div class="caixa-perguntas">
                 <p>
-                    Pensando em poupar tempo, qual seria a melhor opção? <br> <br>
+                    Pensando em poupar tempo, qual seria a melhor opção? <br> <br> <br>
                     1 → Preparar seu prato no microondas <br>
                     2 → Procurar um chef auxiliar <br> <br> <br>
                 </p>
