melhorias no espaçamento do texto

--- a/pairulito/pairulito-torta-de-limao-um.html
+++ b/pairulito/pairulito-torta-de-limao-um.html
@@ -18,7 +18,7 @@
             <div class="caixa-perguntas">
                 <p>
                     Os limões estão incríveis nesse mercado! Você faz um torta perfeita e ganha a competição! <br> <br>
-                    Parabéns!                   
+                    Parabéns! <br> <br> 
                 </p>
                 <a href=""><p class="botao" id="caminho-hot-dog" onclick="jogarDeNovo()">JOGAR DE NOVO</p></a>
             </div>
