--- a/pairulito/bolo-um-um.html
+++ b/pairulito/bolo-um-um.html
@@ -19,7 +19,7 @@
                 <p>
                     Ninguém reparou que você sumiu… Mas pelo menos estão todos felizes com sua descoberta! <br>
                     Para compensar, seus amigos resolvem improvisar uma competição de última hora, contando com o total de um prato: o seu. <br> <br>
-                    Parabéns, você ganhou!
+                    Parabéns, você ganhou! <br> <br>
                 </p>
                 <a href=""><p class="botao" id="caminho-hot-dog" onclick="jogarDeNovo()">JOGAR DE NOVO</p></a>
             </div>
